--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Project Muun</h1>
+                <h1>Project Muun.</h1>
                 <hr>
                 <p>Better Sleep. For Everyone.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
