Way more content

--- a/index.html
+++ b/index.html
@@ -23,36 +23,58 @@
 
       <header>
 
-        <a href=".">Muun Light</a>
+        <a href="./index.html">Muun Light</a>
 
       </header>
 
       <div class="bar background" style="background-image: url(img/clouds.jpg)">
         <h1>Project Muun</h1>
         <h3>Better Sleep. For Everyone.</h3>
+        <a class="button">Our Technology</a>
+        <br />
+        <br />
       </div>
 
       <div class="bar" >
-        <h1>Which muun do you want?</h1>
+        <h1>Which muun do you need?</h1>
 
         <div class="collum">
             <h2>Muun Light</h2>
+            <img src="img/moon.svg"/>
             <h4>
-                Wakes you up in your lightest sleep phase
+                Muun Light will wake you up during your lightest sleep phase, so you feel refreshed and happy.
             </h4>
+            <a class="button">Download</a>
         </div>
 
 
         <div class="collum">
             <h2>Muun Heavy</h2>
+            <img src="img/rocket.svg"/>
             <h4>
-                provides you with detailed statistics about your sleep.
+                will provide you with detailed statistics about your sleep.
             </h4>
+            <a class="button">Download</a>
         </div>
       </div>
 
       <div class="bar" style="background-color: #ffffff; color: #555555">
         <h1>About Us</h1>
+
+        <div class="bio">
+           <img src="img/Mike-300x300.png" />
+           <h2>Mike Roslikov #1</h2>
+        </div>
+
+        <div class="bio">
+           <img src="img/Mike-300x300.png" />
+           <h2>Mike Roslikov #2</h2>
+        </div>
+
+        <div class="bio">
+           <img src="img/Mike-300x300.png" />
+           <h2>Mike Roslikov #3</h2>
+        </div>
       </div>
 
     </body>
