Resposive design implemented

--- a/index.html
+++ b/index.html
@@ -38,23 +38,25 @@
       <div class="bar" >
         <h1>Which muun do you need?</h1>
 
-        <div class="collum">
-            <h2>Muun Light</h2>
-            <img src="img/moon.svg"/>
-            <h4>
+        <div class="collumn">
+           <div class="padding">
+               <h2>Muun Light</h2>
+               <img src="img/moon.svg"/>
+               <h4>
                 Muun Light will wake you up during your lightest sleep phase, so you feel refreshed and happy.
-            </h4>
-            <a class="button">Download</a>
-        </div>
-
-
-        <div class="collum">
+               </h4>
+               <a class="button">Download</a>
+           </div>
+        </div><div
+        class="collumn">
+         <div class="padding">
             <h2>Muun Heavy</h2>
             <img src="img/rocket.svg"/>
             <h4>
-                will provide you with detailed statistics about your sleep.
+                Muun Heavy provides you with detailed statistics about your sleep.
             </h4>
             <a class="button">Download</a>
+         </div>
         </div>
       </div>
 
