Added image in header

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <body>
 
       <header>
-
-        <a href="./index.html">Muun Light</a>
+		<img src="img/muun_light_logo.svg" alt="Logo" width="42" height="42">
+        <a href="./index.html">Project Muun</a>
 
       </header>
 
