Tried to make a column thing....

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <h4>
                 Muun Light will wake you up during your lightest sleep phase, so you feel refreshed and happy.
                </h4>
-               <a class="button">Download</a>
+               <a href="#light" class="button">Learn More</a>
            </div>
         </div><div
         class="collumn">
@@ -55,32 +55,40 @@
             <h4>
                 Muun Heavy provides you with detailed statistics about your sleep.
             </h4>
-            <a class="button">Download</a>
+            <a class="button">Learn More</a>
          </div>
         </div>
       </div>
-
+	<section id="light">
       <div class="bar" style="background-color: #ffffff; color: #555555">
-        <h1>About Us</h1>
-
-        <div class="bio">
-           <img src="img/Mike-300x300.png" />
-           <h2>Mike Roslikov #1</h2>
-        </div>
-
-        <div class="bio">
-           <img src="img/Mike-300x300.png" />
-           <h2>Mike Roslikov #2</h2>
-        </div>
-
-        <div class="bio">
-           <img src="img/Mike-300x300.png" />
-           <h2>Mike Roslikov #3</h2>
-        </div>
+	  
+        <h1>Muun Light</h1>
+		<div class="collumn">
+           
+		<img src="img/light_screen_shot.png" alt="muun light screen shot" width="346" height="617">
+		</div>
+		
+		<div class="collumn">
+           
+        <h2>Wake Up Better, Feel Better</h2>
+		<h4>Muun Light is a blah blah blah</h4>
+		</div>
+		
       </div>
-
+	</section>
     </body>
 
+	<section id="heavy">
+      <div class="bar" style="background-color: #ffffff; color: #555555">
+        <h1>Muun Heavy</h1>
+
+        <h2>Full Sleep Monitoring</h2>
+		
+      </div>
+	</section>
+    </body>
+
+	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
