image only has height set now

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1>Muun Light</h1>
 		<div class="collumn">
            
-		<img src="img/light_screen_shot.png" alt="muun light screen shot" width="346" height="617">
+		<img src="img/light_screen_shot.png" alt="muun light screen shot"  height="617">
 		</div>
 		
 		<div class="collumn">
